--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <script defer src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
 </head>
+
 <body>
-  <section>
-    <h1>Hello World!</h1>
+  <div id="header" class="header"></div>
+
+  <nav class="nav">
+    <div id="nav__mobile" class="nav__mobile"></div>
+    <ul class="nav__items">
+      <li class="nav__item is-active"><a class="nav__link" href="">Home</a> </li>
+      <li class="nav__item"><a class="nav__link" href="">Shop</a></li>
+      <li class="nav__item"><a class="nav__link" href="">Elements</a></li>
+      <li class="nav__item"><a class="nav__link" href="">Blog</a></li>
+      <li class="nav__item"><a class="nav__link" href="">Page</a></li>
+    </ul>
+    <div id="nav__brand" class="nav__brand"></div>
+    <ul id="nav__options" class="nav__options">
+      <!-- <li class="nav__options__account"></li>
+      <li class="nav__options__basket"></li> -->
+    </ul>
+  </nav>
   </section>
 </body>
+
 </html>
