add scroll to top button

--- a/src/index.html
+++ b/src/index.html
@@ -28,16 +28,16 @@
   </nav>
   <div id="header" class="header container-fluid"></div>
   <div class="carousel">
-  <div class="container">
-    <div class="carousel__wrapper">
-      <div class="swiper-container">
-        <div id="swiper-wrapper" class="swiper-wrapper">
+    <div class="container">
+      <div class="carousel__wrapper">
+        <div class="swiper-container">
+          <div id="swiper-wrapper" class="swiper-wrapper">
+          </div>
         </div>
       </div>
-    </div>
-    <div id="swiper-button-prev" class="swiper-button-prev"></div>
-    <div id="swiper-button-next" class="swiper-button-next"></div>
-    <div class="swiper-scrollbar"></div>
+      <div id="swiper-button-prev" class="swiper-button-prev"></div>
+      <div id="swiper-button-next" class="swiper-button-next"></div>
+      <div class="swiper-scrollbar"></div>
     </div>
   </div>
   <div class="container">
@@ -63,10 +63,10 @@
     <div class="footer" id="footer">
       <div class="row footer__upper">
         <div class="col-sm-3 footer__upper__icons">
-          <img id="twitter-img" class="footer__upper__icon"/>
-          <img id="facebook-img" class="footer__upper__icon"/>
-          <img id="instagram-img" class="footer__upper__icon"/>
-          <img id="pinterest-img" class="footer__upper__icon"/>
+          <img id="twitter-img" class="footer__upper__icon" />
+          <img id="facebook-img" class="footer__upper__icon" />
+          <img id="instagram-img" class="footer__upper__icon" />
+          <img id="pinterest-img" class="footer__upper__icon" />
         </div>
         <div class="col-sm-6 footer__upper__menu">
           <ul class="footer__upper__menu__list">
@@ -75,31 +75,32 @@
             <li class="footer__upper__menu__list__item"><a href="">Privacy Policy</a></li>
           </ul>
         </div>
-        <div class="col-sm-3 footer__upper__custom" >
+        <div class="col-sm-3 footer__upper__custom">
           <div class="footer__upper__custom__currency">
             <span class="footer__upper__custom__currency__desc">Currency:</span>
             <span class="footer__upper__custom__currency__value">usd</span>
             <span class="footer__upper__custom_currency__chevron">
-              <img id="currency-chevron"class="footer__upper__custom_currency__chevron__icon"/>
+              <img id="currency-chevron" class="footer__upper__custom_currency__chevron__icon" />
             </span>
           </div>
           <div class="footer__upper__custom__language">
             <span class="footer__upper__custom__language__desc">Language:</span>
             <span class="footer__upper__custom__language__value">english</span>
             <span class="footer__upper__custom__language__chevron">
-              <img id="language-chevron" class="footer__upper__custom__language__chevron__icon"/>
+              <img id="language-chevron" class="footer__upper__custom__language__chevron__icon" />
             </span>
           </div>
         </div>
       </div>
-    <div class="row footer__down">
+      <div class="row footer__down">
         <div class="col-sm-6 footer__down__copyright">©2019 Zonex All rights reserved</div>
         <div class="col-sm-6 footer__down__payment">
-          <img id="payment-image" class="footer__down__payment__image"/>
+          <img id="payment-image" class="footer__down__payment__image" />
         </div>
       </div>
     </div>
   </div>
+  <div id="scroll-to-top" class="scroll-to-top"></div>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
     crossorigin="anonymous"></script>
