add show more products button service

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
       <div id="content__items" class="content__items"></div>
     </div>
     <div class="content__showMore ">
-      <button class="content__showMore__button">All products</button>
+      <button id="show-more-btn" class="content__showMore__button">All products</button>
     </div>
     <div id="recommended" class="recommended"></div>
     <div class="newsletter" id="newsletter">
