add dynamic year value in footer

--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
         </div>
       </div>
       <div class="row footer__down">
-        <div class="col-sm-6 footer__down__copyright">©2019 Zonex All rights reserved</div>
+        <div class="col-sm-6 footer__down__copyright">©<span id="footer-year"></span> Zonex All rights reserved</div>
         <div class="col-sm-6 footer__down__payment">
           <img id="payment-image" class="footer__down__payment__image" />
         </div>
